<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parking</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="map_btn_txt">View Map</string>
    <string name="findParking_btn_txt">Find Parking</string>
    <string name="listButton_description">Gives a list view of all found parking locations</string>
    <string name="title_activity_place_list">PlaceList</string>
    <string name="action_settings">Settings</string>
    <string name="sort_Distance">Distance</string>
    <string name="sort_Price">Price</string>
    <string name="sort_Optimized">Optimized</string>
    <string name="gps_fixed">GPS Fixed</string>
    <string name="search">Search</string>
    <string name="search_hint">Search City</string>
    <string name="clear_favorites">Clear Favorite Places...</string>
    <string name="clear_recents">Clear Recent Places...</string>
    <string name="menu">Menu</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="filter_header">Add Filters</string>
    <string-array name="navHeaders">
        <item>Home</item>
        <item>Settings</item>
        <item>Favorites</item>
        <item>Car Location</item>
        <item>History</item>
        <item>About Us</item>
    </string-array>

    <string name="monthly_label">Monthly</string>
    <string name="shuttle_label">Shuttle</string>
    <string name="eticket_label">Eticket</string>
    <string name="perk_label">Perk</string>
    <string name="valet_label">Valet</string>
    <string name="indoor_label">Indoor</string>
    <string name="handicap_label">Handicap</string>
    <string name="restroom_label">Restroom</string>
    <string name="security_label">Security</string>
    <string name="tailgate_label">Tailgate</string>
    <string name="rv_label">Rv</string>
    <string name="unobstructed_label">Unobstructed</string>
    <string name="attended_label">Attended</string>
    <string name="reentry_label">Reentry Allowed</string>

    <string name="monthly_Description">Only return monthly parking listings.</string>
    <string name="shuttle_Description">>Only return locations with shuttle service</string>
    <string name="eticket_Description">Only return locations that accept Mobile Passes</string>
    <string name="perk_Description">Only return locations that offer ParkWhiz Perks</string>
    <string name="valet_Description">Only return locations that offer valet service</string>
    <string name="indoor_Description">Only return indoor/covered locations</string>
    <string name="handicap_Description">Only return handicap accessible locations</string>
    <string name="restroom_Description">Only return locations that provide a restroom to customers</string>
    <string name="security_Description">Only return locations with on-site security</string>
    <string name="tailgate_Description">Only return locations that allow tailgating</string>
    <string name="rv_Description">Only return locations that allow RV parking</string>
    <string name="unobstructed_Description">Only return locations with unobstructed parking spots (vehicle wont be blocked in)</string>
    <string name="attended_Description">>Only return locations with an on-site parking attendant</string>
    <string name="reentry_Description">Reentry Only return locations that allow reentry</string>
</resources>
