<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="filter"
            type="com.example.weeamawad.parking.model.NewFilterModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/monthly_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/monthly_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isMonthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isMonthly}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/shuttle_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/shuttle_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isShuttle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isShuttle}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/eticket_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/eticket_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isETicket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isEticket}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/perk_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/perk_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isPerk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isPerk}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/valet_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/valet_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isValet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isValet}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/indoor_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/indoor_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isIndoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isIndoor}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/handicap_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/handicap_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isHandicap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isHandicap}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/restroom_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/restroom_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isRestRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isRestRoom}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/security_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/security_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isSecurity}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/tailgate_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/tailgate_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isTailGate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isTailGate}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/rv_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/rv_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isRv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isRv}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/unobstructed_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/unobstructed_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isUnObstructed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isUnObstructed}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/attended_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/attended_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isAttended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isAttended}" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/reentry_label"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/reentry_Description"
                android:textColor="@color/black"
                android:textSize="8dp" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_isReentryAllowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:checked="@{filter.isReentryAllowed}" />
        </RelativeLayout>
    </LinearLayout>
</layout>